--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url(./components/assets/img/1234.jpg);
+  background-image: url(assets/img/1234.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 
